--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 order-1 order-md-2">
+        <div class="col-md-6 order-1 order-md-2 text-end">
           <i class="fa-solid fa-handshake-angle icon"></i>
         </div>
         <div class="col-md-6 order-2 order-md-1">
@@ -176,40 +176,194 @@
         </div>
       </div>
     </section>
+    <section class="container-fluid work-process">
+      <div class="container">
+        <div class="section-header light">
+          <h3>Work Process</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+            fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Ea, quos.
+          </p>
+        </div>
+        <div
+          class="row g-4 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-6"
+        >
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-rocket"></i>
+                <h5>get Ideas</h5>
+                <p>Lorem ipsum dolor sit amet.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <ul>
-      <li>Lorem.</li>
-      <li>Nemo.</li>
-      <li>Autem.</li>
-      <li>Obcaecati.</li>
-      <li>Amet!</li>
-      <li>Soluta.</li>
-      <li>Quisquam!</li>
-      <li>Odit.</li>
-      <li>Autem!</li>
-      <li>Harum.</li>
-      <li>Recusandae.</li>
-      <li>Reprehenderit.</li>
-      <li>Laboriosam.</li>
-      <li>Maxime.</li>
-      <li>Quae!</li>
-      <li>Dicta?</li>
-      <li>Nostrum.</li>
-      <li>Accusantium.</li>
-      <li>Possimus.</li>
-      <li>Ullam.</li>
-      <li>Iste.</li>
-      <li>A?</li>
-      <li>Quia.</li>
-      <li>Dicta?</li>
-      <li>Sint!</li>
-      <li>Eum!</li>
-      <li>Quia!</li>
-      <li>Corporis.</li>
-      <li>Error!</li>
-      <li>Eos.</li>
-    </ul>
+    <section class="container testimonals">
+      <div class="section-header">
+        <h3>What do they say?</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+          fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ea, quos.
+        </p>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <i class="fa-solid fa-comment-dots"></i>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita enim aliquam exercitationem!
+              </p>
+              <div>
+                <div>David Martin</div>
+                <div class="title">Website Manager</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <i class="fa-solid fa-comment-dots"></i>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita enim aliquam exercitationem!
+              </p>
+              <div>
+                <div>David Martin</div>
+                <div class="title">Website Manager</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <div class="card-body">
+              <i class="fa-solid fa-comment-dots"></i>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Expedita enim aliquam exercitationem!
+              </p>
+              <div>
+                <div>David Martin</div>
+                <div class="title">Website Manager</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="container-fluid pricing-plan">
+      <div class="container">
+        <div class="section-header">
+          <h3>What do they say?</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+            fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Ea, quos.
+          </p>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-comment-dots"></i>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Expedita enim aliquam exercitationem!
+                </p>
+                <div>
+                  <div>David Martin</div>
+                  <div class="title">Website Manager</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-comment-dots"></i>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Expedita enim aliquam exercitationem!
+                </p>
+                <div>
+                  <div>David Martin</div>
+                  <div class="title">Website Manager</div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <div class="card-body">
+                <i class="fa-solid fa-comment-dots"></i>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Expedita enim aliquam exercitationem!
+                </p>
+                <div>
+                  <div>David Martin</div>
+                  <div class="title">Website Manager</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
