--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <section class="container fixed-top mt-3">
+    <header class="container fixed-top mt-3">
       <nav class="navbar navbar-expand-xl bg-light-subtle main-navbar">
         <div class="container-fluid">
           <a
@@ -80,7 +80,7 @@
           </div>
         </div>
       </nav>
-    </section>
+    </header>
 
     <section
       id="carouselExample"
@@ -148,7 +148,7 @@
     </section>
 
     <section class="container about-us">
-      <div class="row">
+      <div class="row g-5">
         <div class="col-md-6">
           <i class="fa-solid fa-comments icon"></i>
         </div>
@@ -162,7 +162,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6 order-1 order-md-2 text-end">
+        <div class="col-md-6 order-1 order-md-2 text-center text-md-end">
           <i class="fa-solid fa-handshake-angle icon"></i>
         </div>
         <div class="col-md-6 order-2 order-md-1">
@@ -176,24 +176,25 @@
         </div>
       </div>
     </section>
+
     <section class="container-fluid work-process">
       <div class="container">
         <div class="section-header light">
           <h3>Work Process</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-            fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Ea, quos.
+            Aenean nec tempor metus. Maecenas ligula dolor, commodo in imperdiet
+            interdum, vehicula ut ex. Donec ante diam.
           </p>
         </div>
+
         <div
-          class="row g-4 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-6"
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-6 g-4"
         >
           <div class="col">
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>Get Ideas</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -202,7 +203,7 @@
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>Sketch Up</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -211,7 +212,7 @@
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>Discuss</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -220,7 +221,7 @@
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>REvise</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -229,7 +230,7 @@
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>Approve</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -238,7 +239,7 @@
             <div class="card">
               <div class="card-body">
                 <i class="fa-solid fa-rocket"></i>
-                <h5>get Ideas</h5>
+                <h5>Launch</h5>
                 <p>Lorem ipsum dolor sit amet.</p>
               </div>
             </div>
@@ -251,19 +252,19 @@
       <div class="section-header">
         <h3>What do they say?</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-          fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-          consectetur adipisicing elit. Ea, quos.
+          Donec tempus, sem non rutrum imperdiet, lectus orci fringilla nulla,
+          at accumsan elit eros a turpis. Ut sagittis lectus libero.
         </p>
       </div>
+
       <div class="row">
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <i class="fa-solid fa-comment-dots"></i>
+              <i class="fa-regular fa-comment-dots"></i>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Expedita enim aliquam exercitationem!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                aliquam placeat officiis?
               </p>
               <div>
                 <div>David Martin</div>
@@ -275,10 +276,10 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <i class="fa-solid fa-comment-dots"></i>
+              <i class="fa-regular fa-comment-dots"></i>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Expedita enim aliquam exercitationem!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                aliquam placeat officiis?
               </p>
               <div>
                 <div>David Martin</div>
@@ -290,10 +291,10 @@
         <div class="col">
           <div class="card">
             <div class="card-body">
-              <i class="fa-solid fa-comment-dots"></i>
+              <i class="fa-regular fa-comment-dots"></i>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Expedita enim aliquam exercitationem!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                aliquam placeat officiis?
               </p>
               <div>
                 <div>David Martin</div>
@@ -308,62 +309,230 @@
     <section class="container-fluid pricing-plan">
       <div class="container">
         <div class="section-header">
-          <h3>What do they say?</h3>
+          <h3>Pricing Plans</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-            fugit? Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Ea, quos.
+            Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis
+            arcu elementum, quis congue risus volutpat.
           </p>
         </div>
+
         <div class="row">
           <div class="col">
             <div class="card">
               <div class="card-body">
-                <i class="fa-solid fa-comment-dots"></i>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita enim aliquam exercitationem!
-                </p>
-                <div>
-                  <div>David Martin</div>
-                  <div class="title">Website Manager</div>
+                <h6>Starter</h6>
+                <div class="price">
+                  <h3>$14.50</h3>
+                  <span>montly</span>
                 </div>
+                <ul>
+                  <li>60 GB space</li>
+                  <li>600 GB transfer</li>
+                  <li>Pro Design Panel</li>
+                  <li>15-minute support</li>
+                  <li>Unlimited Emails</li>
+                  <li>24/7 Security</li>
+                </ul>
+                <button class="btn btn-primary">Purchase Now</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
               <div class="card-body">
-                <i class="fa-solid fa-comment-dots"></i>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita enim aliquam exercitationem!
-                </p>
-                <div>
-                  <div>David Martin</div>
-                  <div class="title">Website Manager</div>
+                <h6>Starter</h6>
+                <div class="price">
+                  <h3>$14.50</h3>
+                  <span>montly</span>
                 </div>
+                <ul>
+                  <li>60 GB space</li>
+                  <li>600 GB transfer</li>
+                  <li>Pro Design Panel</li>
+                  <li>15-minute support</li>
+                  <li>Unlimited Emails</li>
+                  <li>24/7 Security</li>
+                </ul>
+                <button class="btn btn-primary">Purchase Now</button>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card">
               <div class="card-body">
-                <i class="fa-solid fa-comment-dots"></i>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Expedita enim aliquam exercitationem!
-                </p>
-                <div>
-                  <div>David Martin</div>
-                  <div class="title">Website Manager</div>
+                <h6>Starter</h6>
+                <div class="price">
+                  <h3>$14.50</h3>
+                  <span>montly</span>
                 </div>
+                <ul>
+                  <li>60 GB space</li>
+                  <li>600 GB transfer</li>
+                  <li>Pro Design Panel</li>
+                  <li>15-minute support</li>
+                  <li>Unlimited Emails</li>
+                  <li>24/7 Security</li>
+                </ul>
+                <button class="btn btn-primary">Purchase Now</button>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="container-fluid statistics">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col">
+            <h4>126</h4>
+            <span>Projects</span>
+          </div>
+          <div class="col">
+            <img src="assets/img/circle-dec.png" alt="" />
+          </div>
+          <div class="col">
+            <h4>126</h4>
+            <span>Projects</span>
+          </div>
+          <div class="col align-self-start">
+            <img src="assets/img/circle-dec.png" alt="" />
+          </div>
+          <div class="col">
+            <h4>126</h4>
+            <span>Projects</span>
+          </div>
+          <div class="col">
+            <img src="assets/img/circle-dec.png" alt="" />
+          </div>
+          <div class="col">
+            <h4>126</h4>
+            <span>Projects</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container blog-entries">
+      <div class="section-header">
+        <h3>Blog Entries</h3>
+        <p>
+          Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis
+          arcu elementum, quis congue risus volutpat.
+        </p>
+      </div>
+
+      <div class="row g-4 row-cols-1 row-cols-lg-3">
+        <div class="col">
+          <img src="assets/img/blog-item-01.png" class="img-fluid" alt="" />
+          <h3>Vivamus ac vehicula dui</h3>
+          <p>
+            Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
+            Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas
+            augue.
+          </p>
+          <button class="btn btn-primary">Read More</button>
+        </div>
+        <div class="col">
+          <img src="assets/img/blog-item-02.png" class="img-fluid" alt="" />
+          <h3>Vivamus ac vehicula dui</h3>
+          <p>
+            Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
+            Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas
+            augue.
+          </p>
+          <button class="btn btn-primary">Read More</button>
+        </div>
+        <div class="col">
+          <img src="assets/img/blog-item-03.png" class="img-fluid" alt="" />
+          <h3>Vivamus ac vehicula dui</h3>
+          <p>
+            Cras aliquet ligula dui, vitae fermentum velit tincidunt id.
+            Praesent eu finibus nunc. Nulla in sagittis eros. Aliquam egestas
+            augue.
+          </p>
+          <button class="btn btn-primary">Read More</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid contact">
+      <div class="container">
+        <div class="section-header">
+          <h3>Talk To Us</h3>
+          <p>
+            Donec vulputate urna sed rutrum venenatis. Cras consequat magna quis
+            arcu elementum, quis congue risus volutpat.
+          </p>
+        </div>
+
+        <div class="row g-5">
+          <div class="col-lg-4">
+            <div class="keep-in-touch">
+              <h3>Keep in touch</h3>
+              <p>
+                110-220 Quisque diam odio, maximus ac consectetur eu, 10260
+                auctor non lorem
+              </p>
+
+              <p>
+                You are NOT allowed to re-distribute Softy Pinko template on any
+                template collection websites. Thank you.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <form class="row g-4">
+              <div class="col-md-6">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="txtName"
+                  placeholder="Full name"
+                />
+              </div>
+              <div class="col-md-6">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="txtEmail"
+                  placeholder="Email address"
+                />
+              </div>
+              <div class="col-12">
+                <textarea
+                  class="form-control"
+                  id="txtMessage"
+                  placeholder="Your message"
+                  rows="7"
+                ></textarea>
+
+              </div>
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary">Sign in</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="container-fluid footer">
+      <div class="container">
+        <ul class="social">
+          <li><a href="#" target="_blank"><i class="fa-brands fa-facebook"></a></i></li>
+          <li><a href="#" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
+          <li><a href="#" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+        </ul>
+        <hr>
+        <div class="copyright">
+          &copy;2023 - Copyright by Softy Pinko
+        </div>
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
